# Thesis

./: .gitignore  README.md  gitignore.txt
.github/ISSUE_TEMPLATE/: user-story.md
Micro-Processors/Arduino_ros_Turntable/Arduino_simple_Turn_Ros/: Arduino_simple_Turn_Ros.ino
Micro-Processors/Arduino_ros_Turntable/Arduino_simple_Turn_Ros_debug/: Arduino_simple_Turn_Ros_debug.ino
Rhino/cutting protocol/220117/: robot_cut_pattern4s.gh  robot_cut_pattern5s.gh  robot_cut_pattern6.gh
Rhino/ee/: Material_gripper_2.3dm  Material_gripper_2.3dmbak
abb_moveit/config/: abb_120_controllers.yaml  ros_controllers.yaml
abb_moveit/launch/: fake_moveit_controller_manager.launch.xml
images/: Mind Map [Recovered].ai
models/: table.3dm  table_iaac.stlbak  tool1_demo.stl  tool1_demo.stlbak  tool_1_demo.3dm  tool_1_demo_collision.3dm
ros_ws/abb_moveit_2/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/abb_moveit_2/config/: abb_irb120_3_58.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
ros_ws/abb_moveit_2/launch/: abb_irb120_3_58_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ros_ws/st4_ws/: README.md  st4_ws.workspace
ros_ws/st4_ws/devel/: .catkin  env.sh  (+7 more)
ros_ws/st4_ws/src/abb_node/: CMakeLists.txt  CMakeLists_old.txt  package.xml
ros_ws/st4_ws/src/abb_node/Libs/RobotComm/: CMakeLists.txt
ros_ws/st4_ws/src/abb_node/Libs/RobotComm/include/: abb_comm.h
ros_ws/st4_ws/src/abb_node/Libs/RobotComm/src/: abb_comm.cpp
ros_ws/st4_ws/src/abb_node/Libs/RobotMath/: CMakeLists.txt
ros_ws/st4_ws/src/abb_node/Libs/RobotMath/include/: HomogTransf.h  Mat.h  Polynom.h  Quaternion.h  RotMat.h  Vec.h  matVec.h
ros_ws/st4_ws/src/abb_node/Libs/RobotMath/src/: HomogTransf.cpp  Mat.cpp  Polynom.cpp  Quaternion.cpp  RotMat.cpp  Vec.cpp
ros_ws/st4_ws/src/abb_node/Libs/Robot_Responce_Simulator/: CMakeLists.txt
ros_ws/st4_ws/src/abb_node/Libs/Robot_Responce_Simulator/include/: rapid_responce_simulator.h
ros_ws/st4_ws/src/abb_node/Libs/Robot_Responce_Simulator/src/: rapid_responce_simulator.cpp
ros_ws/st4_ws/src/abb_node/include/: abb_node.h  abb_node_moveit.h  abb_node_services.h  abb_rapid_code_definitions.h
ros_ws/st4_ws/src/abb_node/launch/: abb_120_not_good.launch  abb_tf.launch  robot_params.yaml
ros_ws/st4_ws/src/abb_node/scripts/: abb_Py_comm.py
ros_ws/st4_ws/src/abb_node/src/: abb_node.cpp  abb_node_moveit.cpp
ros_ws/st4_ws/src/abb_node/srv/: robot_GetCartesian.srv  robot_GetJoints.srv  robot_IsMoving.srv  robot_Ping.srv  robot_SetCartesian.srv  robot_SetComm.srv  robot_SetDIO.srv  robot_SetJoints.srv  robot_SetSpeed.srv  robot_SetTool.srv  robot_SetTrackDist.srv  robot_SetVacuum.srv  robot_SetWorkObject.srv  robot_SetZone.srv  robot_SpecialCommand.srv  robot_Stop.srv
ros_ws/turntable/: turn-scanner.workspace
ros_ws/turntable/src/Mini-3D-Scanner/: CMakeLists.txt  README.md
ros_ws/turntable/src/Mini-3D-Scanner/include/: pcl_processing.h  processor_node.h
ros_ws/turntable/src/Mini-3D-Scanner/launch/: debug.launch  pipeline.launch  pipeline_astra.launch
ros_ws/turntable/src/Mini-3D-Scanner/lib/: modern_robotics.py  modern_robotics.py.autosave
ros_ws/turntable/src/Mini-3D-Scanner/scripts/: rotate_pcl.py
ros_ws/turntable/src/Mini-3D-Scanner/src/: camera_emulator.cpp  open3d_processing.py  pcl_processing.cpp  processor_node.cpp  rotation_dir.cpp  showRegResultOnline.cpp
(+1011 files in other folders)
